[package]
name = "snx"
version = "0.0.1"
authors = ["Julian Ollivieira"]
edition = "2021"
description = "an experimental web framework"
documentation = "https://docs.rs/snx"
repository = "https://github.com/julianollivieira/snx"
license = "MIT"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
